# server

./: .dockerignore  .env  .gitignore  .gitmodules  .prettierignore  .prettierrc  .rustfmt.toml  .stylelintrc.mjs  .vimrc  Cargo.toml  Dockerfile.distroless  Dockerfile.grafana.builder  Dockerfile.server  Makefile  README.md  WSL-CHEATSHEET.md  app.py  blackbox.yml  cargo.toml  clippy.toml  commitlint.config.cjs  docker-compose.yml  eslint.config.mjs  example.env  flake.nix  main.py  package.json  pnpm-lock.yaml  prometheus.yml  system-architecture.mermaid  tsconfig.base.json  turbo.json
apps/audio-sender/: Cargo.toml
apps/audio-sender/src/: main.rs
apps/audio-transcriber/: .env.example  Cargo.toml  README.md  ROADMAP.md  output.txt
apps/audio-transcriber/docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md
apps/audio-transcriber/docs/milestones/: measure-0-latency-budget.md  milestone-contract-template.md
apps/audio-transcriber/examples/: simple_wav.rs  whisper_benchmark.rs  whisper_test.rs
apps/audio-transcriber/src/: audio.rs  config.rs  lib.rs  main.rs  observability.rs  state.rs  transcription.rs  vad.rs  worker.rs
apps/audio-transcriber/src/hotpath/: buffer.rs  gpu.rs  knn.rs  mod.rs  spec.rs
apps/audio-transcriber/src/worker/: queue.rs  whisper.rs
apps/audio-transcriber/tests/: alloc_guard.rs  milestones.rs
apps/orchestrator/: Cargo.toml  README.md
apps/orchestrator/src/: lib.rs  main.rs  manager.rs  service.rs  types.rs
apps/orchestrator/src/types/: commands.rs  dto.rs
apps/pocket/: Cargo.toml
apps/pocket/pocket_registry/: registers.json
apps/pocket/src/: error.rs  lib.rs  main.rs
apps/pocket/src/cli/: handlers.rs  mod.rs
apps/pocket/src/model/: mod.rs
apps/scene-init/: Cargo.toml
apps/scene-init/src/: main.rs
apps/some-obs/: Cargo.toml
apps/some-obs/src/: config.rs  error.rs  lib.rs  main.rs  messages.rs  service.rs
apps/tabsched-cli/: Cargo.toml
apps/tabsched-cli/.ts_data/: state.json  topology.toml
apps/tabsched-cli/src/: cache.rs  cmd.rs  config.rs  ctx.rs  main.rs
apps/tabsched-pipeline/: .env.example  Cargo.toml
apps/tabsched-pipeline/prompts/: derive-edges.md  derive-tracks.md
apps/tabsched-pipeline/src/: engine.rs  error.rs  lib.rs  llm.rs  runtime.rs  stages.rs  types.rs
apps/telemetry-collector/: Cargo.toml
crates/animations/: Cargo.toml
crates/animations/src/: lib.rs  main.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/audio_capture/: Cargo.toml  README.md
crates/audio_capture/src/: lib.rs  main.rs
crates/cursorium/: Cargo.toml
crates/cursorium/examples/: demo.rs
crates/cursorium/src/: core.rs  lib.rs
crates/cursorium/tests/: orchestrator_fsm.rs
crates/enum-name-derive/: Cargo.toml
crates/enum-name-derive/src/: lib.rs
crates/enum-name-derive/tests/: ui_tests.rs
crates/espn_nfl_scores/: .env.toml  Cargo.toml
crates/espn_nfl_scores/src/: config.rs  error.rs  main.rs
crates/file_host/: .env.toml  Cargo.toml
crates/file_host/src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  utils.rs  websocket.rs
crates/file_reader/: Cargo.toml
crates/file_reader/examples/: demo.rs
crates/file_reader/src/: lib.rs
crates/gmail/: Cargo.toml
crates/gmail/src/: api.rs  lib.rs
crates/google-apis-common/: Cargo.toml
crates/google-apis-common/src/: auth.rs  field_mask.rs  lib.rs  serde.rs  url.rs
crates/gsheet_derive/: Cargo.toml
crates/gsheet_derive/src/: lib.rs
crates/leaderboard/: Cargo.toml  README.md
crates/leaderboard/examples/: demo.rs
crates/leaderboard/src/: float_utils.rs  layout.rs  lib.rs
crates/nest/: .env.toml  .gitignore  Cargo.toml
crates/nest/migrations/: 20240708081227_create_browser_tabs.down.sql  20240708081227_create_browser_tabs.up.sql  20240708105821_rename-index-column.down.sql  20240708105821_rename-index-column.up.sql  20240708111636_add-new-field.down.sql  20240708111636_add-new-field.up.sql  20240708112126_add-new-field.down.sql  20240708112126_add-new-field.up.sql  20240708112642_rename-field.down.sql  20240708112642_rename-field.up.sql  20240708201206_modify-column-not-null.down.sql  20240708201206_modify-column-not-null.up.sql  20240709013544_add-new-columns.down.sql  20240709013544_add-new-columns.up.sql  20240709014303_rename-column-fields.down.sql  20240709014303_rename-column-fields.up.sql  20240709020753_drop-column.down.sql  20240709020753_drop-column.up.sql  20240722010741_fix-incorrect-datetime.up.sql  20240722015939_update-bool-column-to-notnull.down.sql  20240722015939_update-bool-column-to-notnull.up.sql  20240727211116_update-column-notnull.down.sql  20240727211116_update-column-notnull.up.sql  README.md
crates/nest/src/: cli.rs  config.rs  lib.rs  main.rs
crates/nfl_play_parser/: Cargo.toml
crates/nfl_play_parser/examples/: demo.html  demo.rs  schedule_parser.rs  scoring_parser.rs
crates/nfl_play_parser/src/: error.rs  lib.rs
crates/nfl_scenarios/: Cargo.toml
crates/nfl_scenarios/src/: lib.rs
crates/noobgit/: Cargo.toml  README.md
crates/noobgit/examples/: demo.rs  playground.rs
crates/noobgit/src/: debouncer.rs  error.rs  file_system.rs  lib.rs  registry.rs
crates/obs-websocket/: 3  Cargo.toml
crates/obs-websocket/examples/: commands.rs  daemon.rs  stream.rs  youtube.rs
crates/obs-websocket/src/: auth.rs  config.rs  core.rs  lib.rs  messages.rs  polling.rs  state.rs  types.rs
crates/pkg_cloner/: Cargo.toml
crates/pkg_cloner/benches/: benchmark.rs
crates/pkg_cloner/src/: lib.rs  main.rs
crates/sdk/: .gitignore  Cargo.toml  client_secret_file.example.json
crates/sdk/examples/: demo.rs  gdrive_api_demo.rs  github_api_demo.rs  gmail_api_demo.rs  gsheet_api_demo.rs  read_gmail_demo.rs  ytube_api_demo.rs
crates/sdk/src/: google_client.rs  lib.rs  util.rs
crates/some-cache/: Cargo.toml  README.md
crates/some-cache/docs/: DEFINITION_OF_DONE.md  ROADMAP.md  USER_STORY.md
crates/some-cache/src/: config.rs  dedup.rs  entry.rs  error.rs  lib.rs  metrics.rs  store.rs  stream.rs
crates/some-cache/tests/: alloc_guard.rs  milestones.rs
(+692 files in other folders)
