
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"


members = ["crates/espn_nfl_scores", "crates/file_reader","crates/nest", "crates/nfl_play_parser", "crates/nfl_scenarios", "crates/noobgit", "crates/sdk", "crates/servers/chrome_tabs_server", "crates/servers/nfl_server", "crates/task_queue", "crates/tuvitu", "crates/webhooks"]

exclude = []

# new crates created should not create their own .git
[cargo-new]
vcs = "none"

[workspace.lints.clippy]
all = { level = "deny", priority = 2 }
pedantic = { level = "deny", priority = 2 }
nursery = { level = "deny", priority = 2 }
cargo = { level = "deny", priority = 2 }

[workspace.package]
version = "0.0.0"
authors = ["pgdev"]
repository = "https://github.com/paulgsc/server"
homepage = "https://maishatu.com/"
license = "MIT"
edition = "2021"

[workspace.dependencies]

nest = { path = "crates/nest" }
file_reader = { path = "crates/file_reader" }
nfl_play_parser = { path = "crates/nfl_play_parser" }

anyhow = "1.0"
async-trait = "0.1.64"
axum = { version = "0.7.5", features = ["http2", "macros", "matched-path"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
chrono = "0.4.23"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.26"
itertools = "0.10.5"
lazy_static = "1.4.0"
notify = "6.1.1"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tempfile = "3.3.0"
thiserror = "1.0.48"
tokio = "1.41.0"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
regex = "1.7.0"
