
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"


members = ["crates/espn_nfl_scores", "crates/file_reader","crates/nest", "crates/nfl_play_parser", "crates/nfl_scenarios", "crates/noobgit", "crates/sdk", "apps/servers/nfl_server", "crates/task_queue", "crates/webhooks", "crates/sqlite_macros", "crates/animations", "apps/servers/file_host", "crates/enum-name-derive", "crates/audio_capture", "crates/tw_lint", "crates/gsheet_derive", "crates/obs-websocket", "crates/some-mujik", "crates/stream-stepper", "crates/some-utils", "crates/some-services", "crates/agents/auto_fixer", "crates/db/mood_event", "crates/ws-connection", "crates/some-transport", "crates/some-utility", "crates/ws-conn-manager", "crates/ws-events", "apps/some-obs", "apps/orchestrator", "crates/ts-bindgen", "apps/audio-sender", "apps/audio-transcriber", "crates/cursorium", "apps/scene-init",]

exclude = [".github/scripts"]

[workspace.lints.clippy]
all = { level = "deny", priority = 2 }
pedantic = { level = "deny", priority = 2 }
nursery = { level = "deny", priority = 2 }
cargo = { level = "deny", priority = 2 }


[workspace.package]
version = "0.0.0"
authors = ["pgdev"]
repository = "https://github.com/paulgsc/server"
homepage = "https://maishatu.com/"
license = "MIT"
edition = "2021"

[workspace.dependencies]

nest = { path = "crates/nest" }
file_reader = { path = "crates/file_reader" }
nfl_play_parser = { path = "crates/nfl_play_parser" }
sdk = { path = "crates/sdk" }
sqlite_macros = { path = "crates/sqlite_macros" }
enum-name-derive = { path = "crates/enum-name-derive" }
gsheet_derive = { path = "crates/gsheet_derive" }
obs-websocket = { path = "crates/obs-websocket" }
some-services = { path = "crates/some-services" }
mood_event = { path = "crates/db/mood_event" }
ws-connection = { path = "crates/ws-connection" }
some-transport = { path = "crates/some-transport" }
ws-conn-manager = { path = "crates/ws-conn-manager" }
ws-events = { path = "crates/ws-events" }
cursorium = { path = "crates/cursorium" }

anyhow = "1.0"
async-trait = "0.1.64"
axum = { version = "0.7.5", features = ["http2", "macros", "matched-path"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.26"
lazy_static = "1.4.0"
mime = "0.3.17"
notify = "6.1.1"
once_cell = "1.17.1"
proc-macro2 = "1.0.79"
prometheus = "0.13.4"
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
syn = "1.0.107"
sqlx = "0.7"
tempfile = "3.3.0"
thiserror = "1.0.48"
tokio = "1.41.0"
tokio-util = "0.7.17"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.37"
regex = "1.7.0"

opentelemetry = "0.29.1"
opentelemetry_sdk = { version = "0.29.0"  }
opentelemetry-otlp = { version = "0.29.0" }
tracing-subscriber = { version = "0.3.20" }
tracing-opentelemetry = "0.30.0"
