[package]
name = "audio-transcriber"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
anyhow = { workspace = true }
cpal = "0.16.0"
ws-events.workspace = true
some-transport = { workspace = true, features = ["nats"] }
whisper-rs = "0.15.1"

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "metrics", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }
dotenvy = "0.15.7"
clap.workspace = true
tokio-util.workspace = true

[lints]
workspace = true

[dev-dependencies]
hound = "3.5.1"
num_cpus = "1.17.0"
