[package]
name = "audio-transcriber"
description = "Audio transcription application"
categories = ["multimedia::audio"]
keywords = ["audio", "transcription", "speech"]
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]

[lints]
workspace = true
