[package]
name = "scene-init"
description = "OBS scene initialization utility"
categories = ["multimedia"]
keywords = ["obs", "scene", "streaming"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inquire = "0.7"

[lints]
workspace = true
