[package]
name = "tabsched-cli"
description = "Tab scheduler CLI application"
categories = ["command-line-interface"]
keywords = ["tabsched", "scheduler", "cli"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tabsched.workspace = true
anyhow =  { workspace = true } 
clap.workspace = true
owo-colors = "4.3.0"
serde.workspace = true
toml = "1.0.7"
dirs-next = "2.0.0"
dotenvy.workspace = true
some-cache.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "registry", "tracing-log" ] }
hostname = "0.4.2"

[lints]
workspace = true
