[package]
name = "telemetry-collector"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
some-transport  = { workspace = true , features = ["nats", "mpsc_utils"] }
ws-events  = { workspace = true }

axum = { workspace = true }
bytes = { version = "1.10.1" }
clap = { workspace = true }
dotenv = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true , features = ["limit", "load-shed"] }
tower-http = { workspace = true, features = ["fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "tracing-log" ] }



[lints]
workspace = true
