[package]
name = "animations"
description = "Terminal animation utilities"
categories = ["command-line-interface"]
keywords = ["animation", "terminal", "crossterm"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crossterm = "0.27"

[lints]
workspace = true
