[package]
name = "audio_capture"
description = "Audio capture utilities"
categories = ["multimedia::audio"]
keywords = ["audio", "capture"]
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]

[lints]
workspace = true
