[package]
name = "cursorium"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
smallvec = "1.15.1"

ws-events = { workspace = true }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { version = "0.1" }

[lints]
workspace = true
