[package]
name = "enum-name-derive"
description = "Derive macro for enum variant names"
categories = ["development-tools"]
keywords = ["derive", "enum", "macro"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true

[lints]
workspace = true
