[package]
name = "espn_nfl_scores"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sdk = { workspace = true }

clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
scraper = "0.13.0"
csv = "1.1.6"
rustls = { version = "0.23", features = ["ring"] }

[lints]
workspace = true
