[package]
name = "file_host"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# path crates
nest  = { workspace = true }
sdk  = { workspace = true }

axum = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
log = "0.4.14"
lazy_static = { workspace = true }
prometheus = { workspace = true }
redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "tracing-log" ] }

[lints]
workspace = true
