[package]
name = "file_host"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# path crates
sdk  = { workspace = true }
gsheet_derive  = { workspace = true }
enum-name-derive  = { workspace = true }
obs-websocket  = { workspace = true }

axum = { workspace = true , features = ["ws"]}
anyhow = { workspace = true }
async-broadcast = "0.7.2"
bytes = { version = "1.10.1" }
clap = { workspace = true }
dotenv = { workspace = true }
log = "0.4.14"
lazy_static = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true , features = ["limit", "load-shed"] }
tower-http = { workspace = true, features = ["fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "tracing-log" ] }
polars = { version =  "0.46.0", features = ["lazy"] }
tokio-stream = "0.1.17"
dashmap = "6.1.0"
hex = "0.4.3"
flate2 = "1.1.2"
moka = { version =  "0.12.10", features = ["future", "sync"] }
garde = { version =  "0.22.0", features = ["full"] }
sha2 = "0.10.9"
uuid = "1.18.0"
chrono.workspace = true

[lints]
workspace = true
