[package]
name = "file_reader"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
scraper = "0.13.0"
csv = "1.1.6"

[lints]
workspace = true
