[package]
name = "google-apis-common"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
mime = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "^1.0"

base64 = "0.22"
chrono = { version = "0.4.35", default-features = false, features = ["clock", "serde"] }
url = "2.0"
percent-encoding = "2.0"

yup-oauth2 = { version = "9", optional = true }
itertools = "0.13"
hyper = { version = "^0.14", features = ["client", "http2"] }
http = "^0.2"
tokio = { version = "^1.0", features = ["time"] }
tower-service = "^0.3.1"


[lints]
workspace = true
