[package]
name = "gsheet_derive"
description = "Derive macro for Google Sheets integration"
categories = ["development-tools"]
keywords = ["google", "sheets", "derive"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
