[package]
name = "leaderboard"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[lints]
workspace = true
