[package]
name = "nest"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
some-services = { workspace = true }

axum = "0.7"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "tracing-log" ] }
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "uuid", "time"] }

# Utility Crates
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
rand = "0.8.4"
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
chrono = { workspace = true }
