[package]
name = "nfl_play_parser"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
file_reader = { workspace = true }

futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
regex.workspace = true
scraper = "0.13.0"

[lints]
workspace = true
