[package]
name = "nfl_play_parser"
description = "NFL play-by-play data parser"
categories = ["parser-implementations"]
keywords = ["nfl", "play", "parser", "sports"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
file_reader = { workspace = true }

futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
regex.workspace = true
scraper = "0.13.0"

[lints]
workspace = true
