[package]
name = "nfl_scenarios"
description = "NFL game scenario modeling"
categories = ["simulation"]
keywords = ["nfl", "scenarios", "sports"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]

[lints]
workspace = true
