[package]
name = "noobgit"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
file_reader = { workspace = true }

lazy_static = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full", "time"] }

[dev-dependencies]
tempfile = "3.13"

[lints]
workspace = true
