[package]
name = "obs-websocket"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
axum = {version =  "0.7",  features = ["ws"] }
chrono = { workspace = true }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-broadcast = "0.6"
once_cell = "1.19"
sha2 = "0.10.9"
base64 = "0.22.1"

[lints]
workspace = true

