[package]
name = "pkg_cloner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
dialoguer = "0.11"
serde_json = { workspace = true }

[lints]
workspace = true
