[package]
name = "pkg_cloner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
dialoguer = "0.11"
serde_json = { workspace = true }

[dev-dependencies]
criterion = "0.4"
tempfile = "3.6"

[build-dependencies]
serde_json = "1.0"

[lints]
workspace = true

[[bench]]
name = "benchmark"
harness = false
